# asistencias_banda

./: .gitignore  DEPLOYMENT.md  README.md  app.py  cargar_datos_ejemplo.py  database.py  iniciar.sh  pyproject.toml  requirements.txt  supabase_database.py
.github/: SKILL_VS_AGENT_COMPARISON.md
.github/agents/: attendance-analyzer.agent.md
.github/skills/streamlit-feature/: SKILL.md
.streamlit/: config.toml  secrets.toml.example
