[project]
name = "asistencias-banda"
version = "1.0.0"
description = "Sistema de gestión de asistencias para Asociación Cultural Musical Cabra del Santo Cristo"
readme = "README.md"
requires-python = ">=3.9,!=3.9.7"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "supabase>=2.0.0",
]

[tool.poetry]
package-mode = false
